--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
 
     <string name="detail_add_to_cart">Añadir al carrito</string>
     <string name="detail_quantity">Disponibles: %1$d</string>
-    <string name="detail_total_price">&lt;b>&lt;big>Total: $%1$.2f USD&lt;/big>&lt;/b>&lt;br/>(%2$d x $%3$.2f)</string>
+    <string name="detail_total_price">Total: $%1$.2f USD(%2$d x $%3$.2f)</string>
+    <!--<string name="detail_total_price">&lt;b>&lt;big>Total: $%1$.2f USD&lt;/big>&lt;/b>&lt;br/>(%2$d x $%3$.2f)</string>-->
 </resources>
