--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,16 @@
     <!--<string name="detail_total_price">Total: $%1$.2f USD(%2$d x $%3$.2f)</string>-->
     <!--<string name="detail_total_price"><b>&lt;big>Total: $%1$.2f USD&lt;/big></b>&lt;br/>(%2$d x $%3$.2f)</string>-->
     <string name="detail_total_price">&lt;b>&lt;big>Total: $%1$.2f USD&lt;/big>&lt;/b>&lt;br/>(%2$d x $%3$.2f)</string>
+
+    <string name="order_track_shipment">Seguir envio</string>
+    <string name="order_status">Estado: %1$s</string>
+    <string name="order_id">ID: %1$s</string>
+    <string name="order_chat_help">¿Necesitas ayuda?</string>
+    <string name="order_title">Historial de compras</string>
+
+    <string name="order_status_oredered">Pedido</string>
+    <string name="order_status_preparing">Preparando</string>
+    <string name="order_status_sent">Enviado</string>
+    <string name="order_status_delivered">Entregado</string>
+    <string name="order_status_unknown">Desconocido</string>
 </resources>
