--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="order_status_sent">Enviado</string>
     <string name="order_status_delivered">Entregado</string>
     <string name="order_status_unknown">Desconocido</string>
+
+    <string name="track_title">Rastreo</string>
+
 </resources>
