View to send message added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="cart_title">Carrito de compra</string>
     <string name="cart_pay">Pagar</string>
 
+    <string name="hint_chat">escribe algo…</string>
+
     <string name="detail_add_to_cart">Añadir al carrito</string>
     <string name="detail_quantity">Disponibles: %1$d</string>
     <!--<string name="detail_total_price">Total: $%1$.2f USD(%2$d x $%3$.2f)</string>-->
