--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,13 +9,15 @@
     <string name="cart_title">Carrito de compra</string>
     <string name="cart_pay">Pagar</string>
 
-    <string name="hint_chat">escribe algo…</string>
+    <string name="chat_title">Soporte</string>
 
     <string name="detail_add_to_cart">Añadir al carrito</string>
     <string name="detail_quantity">Disponibles: %1$d</string>
     <!--<string name="detail_total_price">Total: $%1$.2f USD(%2$d x $%3$.2f)</string>-->
     <!--<string name="detail_total_price"><b>&lt;big>Total: $%1$.2f USD&lt;/big></b>&lt;br/>(%2$d x $%3$.2f)</string>-->
     <string name="detail_total_price">&lt;b>&lt;big>Total: $%1$.2f USD&lt;/big>&lt;/b>&lt;br/>(%2$d x $%3$.2f)</string>
+
+    <string name="hint_chat">escribe algo…</string>
 
     <string name="order_track_shipment">Seguir envio</string>
     <string name="order_status">Estado: %1$s</string>
