Default values for notifications (icon, color and channel)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
 
     <string name="track_title">Rastreo</string>
 
+    <string name="notification_channel_id_default">general</string>
+    <string name="notification_channel_name_default">Generales</string>
+
 </resources>
