Login facebook added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="notification_channel_id_default">general</string>
     <string name="notification_channel_name_default">Generales</string>
 
+    <string name="facebook_application_id" translatable="false">1080183862700428</string>
+    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
+    <string name="facebook_login_protocol_scheme" translatable="false">fb1080183862700428</string>
+
 </resources>
