Badge in toolbar added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
     <string name="facebook_login_protocol_scheme" translatable="false">fb1080183862700428</string>
     <string name="login_welcome">Bienvenido, por favor inicie sesión.</string>
+
     <string name="login_email">Email</string>
     <string name="login_google">Google</string>
     <string name="login_facebook">Facebook</string>
@@ -57,4 +58,7 @@
     <string name="settings_topic_offers">topic_offers</string>
     <string name="not_available">Sin stock disponible</string>
     <string name="zero">0</string>
+
+    <string name="product_menu_history">Historial de compras</string>
+    <string name="promo_title">Promociones</string>
 </resources>
